--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                 livesLeft--;
                 life.text = "Lives Left: " + livesLeft;
                 if(livesLeft === 0){
-                    alert("Game Over! Your Score is : " + scoreCounter + " Refresh page to play again :)");
+                    alert("Game Over! Your Score is : " + scoreCounter);
+                    window.location.reload();
                     state = over;
                 }
             }
@@ -247,7 +248,8 @@
                 livesLeft--;
                 life.text = "Lives Left: " + livesLeft;
                 if(livesLeft === 0){
-                    alert("Game Over! Your Score is : " + scoreCounter + " Refresh page to play again :)");
+                    alert("Game Over! Your Score is : " + scoreCounter);
+                    window.location.reload();
                     state=over;
                 }
             }
@@ -258,7 +260,8 @@
                 livesLeft--;
                 life.text = "Lives Left: " + livesLeft;
                 if(livesLeft === 0){
-                    alert("Game Over! Your Score is : " + scoreCounter + " Refresh page to play again :)");
+                    alert("Game Over! Your Score is : " + scoreCounter);
+                    window.location.reload();
                     state = over;
                 }
             }
@@ -269,7 +272,8 @@
                 livesLeft--;
                 life.text = "Lives Left: " + livesLeft;
                 if(livesLeft === 0){
-                    alert("Game Over! Your Score is : " + scoreCounter + " Refresh page to play again :)");
+                    alert("Game Over! Your Score is : " + scoreCounter);
+                    window.location.reload();
                     state = over;
                 }
             }
