--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Space Invaders</title>
     <script src="pixi.min.js"></script>
     <style>
+        body{
+            font-family: Helvetica;
+        }
         canvas{
             margin: auto;
         }
@@ -13,6 +16,7 @@
     
 </head>
 <body>
+    <h1>Do not let them reach you</h1>
     <script>
         let loader = PIXI.loader,
             resources = PIXI.loader.resources,
